2008-11-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaybin2.c: (activate_group):
	Fix buffer-duration property.

2008-11-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_drain), (gst_base_audio_sink_event),
	(gst_base_audio_sink_sync_latency), (gst_base_audio_sink_render),
	(gst_base_audio_sink_change_state):
	Really fix audiosink drain handling by keeping track of the running_time
	of the last sample.

2008-11-24  Michael Smith <msmith@songbirdnest.com>

	* gst/playback/gstplaybin2.c:
	  Add notification of current stream. Add ability to configure buffer
	  sizes.
	* gst/playback/gsturidecodebin.c:
	  Add ability to configure buffer sizes for streaming mode.
	  Bug #561734.

2008-11-24  Stefan Kost  <ensonic@users.sf.net>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	  Time is already in running_time. Remove base_time handling. Fixes
	  audiosinks not draining and thus chopping some audio in the end.

2008-11-24  David Schleef  <ds@schleef.org>

	* ext/ogg/gstoggmux.c:
	* ext/ogg/gstoggmux.h:
	  If we're muxing a dirac stream, flush the page after every picture.

2008-11-24  Stefan Kost  <ensonic@users.sf.net>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	  Add one log message to check for audio_drained. Sync one log message
	  with the condition. Send EOS after draining audio in pull mode.

2008-11-24  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/gio/gstgiobasesrc.c: (gst_gio_base_src_create):
	* ext/gnomevfs/gstgnomevfssrc.c: (gst_gnome_vfs_src_create):
	Use gst_buffer_try_new_and_alloc() and fail properly if the
	allocation failed. This prevents abort() if downstream elements
	request an insane amount of memory.

2008-11-24  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/volume/gstvolume.c: (volume_choose_func),
	(volume_update_volume), (gst_volume_set_volume),
	(gst_volume_get_volume), (gst_volume_set_mute),
	(gst_volume_class_init), (gst_volume_init),